test: 빠진 테스트 추가